submit() in submit event handler should not contains a value of a submit button.

The value of a submit button is appended to a FormData if its activatedSubmit flag
is set.
In a case of form.submit() is called in submit event handler, we did:

1. Set activatedSubmit flag of the submit button
2. Dispatch submit event
2.1. form.submit() builds FormData
3. Build FormData if the submit event was not prevented
4. Clear activatedSubmit flag of the submit button

In step 2.1, we should not include the submit button. So, this CL changes the
process as follows:

1. Dispatch submit event
1.1 form.submit() builds FormData
2. If the submit event was not prevented,
2.1. Set activatedSubmit flag of the submit button
2.2. Build FormData
2.3. Clear activatedSubmit flag of the submit button

Implementation:
We called setActivatedSubmit() before/after prepareForSubmission(). Instead, we
pass a submit button element to prepareForSubmission(), and call
setActivatedSubmit() just before/after building FormData.

BUG=646790

Review-Url: https://codereview.chromium.org/2340213002
Cr-Commit-Position: refs/heads/master@{#419073}

Former-commit-id: 864df709bb6b675152537a276723c2d0a8757e48