third_party/WebKit/Source/core/html/forms/ImageInputType.cpp
@@ -110,10 +110,8 @@ void ImageInputType::handleDOMActivateEvent(Event* event)
 {
     if (element().isDisabledFormControl() || !element().form())
         return;
-    element().setActivatedSubmit(true);
     m_clickLocation = extractClickLocation(event);
-    element().form()->prepareForSubmission(event); // Event handlers can run.
-    element().setActivatedSubmit(false);
+    element().form()->prepareForSubmission(event, &element()); // Event handlers can run.
     event->setDefaultHandled();
 }
 
